--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,16 +8,22 @@
 </head>
 <body>
 <nav class="navbar navbar-expand bg-primary navbar-dark">
-    <a class="navbar-brand" href="#">CS Courses</a>
+    <a class="navbar-brand" href="#">MealTime</a>
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('main.courses') }}">Courses</a>
+            <a class="nav-link" href="#">Recipes</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.signup') }}">Sign up</a>
+            <a class="nav-link" href="#">Meal Plans</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Auto Chef</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Sign up</a>
         </li>
         {# toolbar, If user not logged in then log in, else log out       #}
         {% if current_user.is_anonymous %}
