--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
             <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Recipes</a>
+            <a class="nav-link" href="{{ url_for('main.recipes') }}">Recipes</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Meal Plans</a>
