--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,11 +8,14 @@
 </head>
 <body>
 <nav class="navbar navbar-expand bg-primary navbar-dark">
-    <a class="navbar-brand" href="#">MealTime</a>
+
+    <a class="navbar-brand" href="{{ url_for('main.index') }}">MealTime</a>
+
     <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
-        </li>
+{#      We don't need a home button, the logo (navbar-brand) can do this#}
+{#        <li class="nav-item">#}
+{#            <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>#}
+{#        </li>#}
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('main.recipes') }}">Recipes</a>
         </li>
@@ -22,23 +25,19 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Auto Chef</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Sign up</a>
-        </li>
         {# toolbar, If user not logged in then log in, else log out       #}
         {% if current_user.is_anonymous %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for("auth.login") }}">Log in</a></li>
+                <a class="nav-link" href="{{ url_for("auth.signup") }}">Sign up</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for("auth.login") }}">Log in</a>
+            </li>
         {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for("auth.logout") }}">Log out</a></li>
         {% endif %}
     </ul>
-    <form class="form-inline ml-auto" action="search" method="post">
-        <input class="form-control" type="search" placeholder="Enter student name" aria-label="Search"
-               name="search_term">
-        <button class="btn btn-primary btn-outline-light" type="submit">Search</button>
-    </form>
 </nav>
 <br>
 <div role=main class="container">
