--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
     <h1>Welcome {{ name }}</h1>
 
     <form class="form-inline ml-auto" action="search" method="post">
-        <input class="form-control" type="search" placeholder="Enter student name" aria-label="Search"
+        <input class="form-control" type="search" placeholder="Search recipes" aria-label="Search"
                name="search_term">
         <button class="btn btn-primary btn-outline-light" type="submit">Search</button>
     </form>
