--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% block title %}Search results{% endblock %}
 {% block content %}
+<form class="form-inline ml-auto" action="search" method="post">
+        <input class="form-control" type="search" placeholder="Search recipes" aria-label="Search"
+               name="search_term">
+        <button class="btn btn-primary btn-outline-light" type="submit">Search</button>
+    </form>
+
 {% if results|length %}
 {# Variable is not empty #}
 <table class="table">
