--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,9 +6,11 @@
 {% block content %}
     <h1>Welcome {{ name }}</h1>
 
-    <form class="form-inline ml-auto" action="search" method="post">
+    <form class="form-inline ml-auto simple_search" action="search" method="post">
         <input class="form-control" type="search" placeholder="Search recipes" aria-label="Search"
                name="search_term">
         <button class="btn btn-primary btn-outline-light" type="submit">Search</button>
     </form>
+    <a href="#" class="simple_search">Advanced Search</a>
+    </div>
 {% endblock %}
