--- a/app/templates/advanced_search.html
+++ b/app/templates/advanced_search.html
@@ -7,13 +7,21 @@
     <form method=post novalidate>
         {{ form.csrf_token }}
         <dl>
-            {{ render_field(form.title, class='form-control') }}
-            {{ render_field(form.name, class='form-control') }}
-            {{ render_field(form.role, class='form-control') }}
-            {{ render_field(form.uni_id, class='form-control') }}
-            {{ render_field(form.email, class='form-control') }}
-            {{ render_field(form.password, class='form-control') }}
-            {{ render_field(form.confirm, class='form-control') }}
+            {{ render_field(form.search_term, class='form-control') }}
+            {{ render_field(form.diet_type, class='form-control') }}
+        <br>
+            <p>Allergies</p>
+            {{ render_field(form.celery, class='form-control') }}
+            {{ render_field(form.gluten, class='form-control') }}
+            {{ render_field(form.seafood, class='form-control') }}
+            {{ render_field(form.eggs, class='form-control') }}
+            {{ render_field(form.lupin, class='form-control') }}
+            {{ render_field(form.mustard, class='form-control') }}
+            {{ render_field(form.tree_nuts, class='form-control') }}
+            {{ render_field(form.peanuts, class='form-control') }}
+            {{ render_field(form.sesame, class='form-control') }}
+            {{ render_field(form.soybeans, class='form-control') }}
+            {{ render_field(form.sulphur, class='form-control') }}
         </dl>
         <br>
         <button type="submit" class="btn btn-primary">Sign Up</button>
