--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,8 +4,7 @@
 {% block title %}Home{% endblock %}
 {# Add the content for this page #}
 {% block content %}
-    <h1>Welcome {{ name }}</h1>
-
+    <h1>Welcome</h1>
     <form class="form-inline ml-auto simple_search" action="search" method="post">
         <input class="form-control" type="search" placeholder="Search recipes" aria-label="Search"
                name="search_term">
