--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,8 +13,12 @@
     {#    <a class="navbar-brand" href="{{ url_for('main.index') }}">MealTime</a>#}
 
     <a class="navbar-brand" href="{{ url_for('main.index') }}">
-        <img src="{{ url_for('static', filename='img/logos/mealtime_logo.png') }}" width="35" height="35"
-             alt="Mealtime Logo">
+        <picture>
+            <source srcset="{{ url_for('static', filename='img/logos/mealtime_logo.png') }}"
+                    media="(min-width: 600px)">
+            <img src="{{ url_for('static', filename='img/Spotify-Logo-1526659588-1024x751.png') }}" alt="logo"
+                 width="35" height="35"/>
+        </picture>
     </a>
 
     <ul class="navbar-nav">
