navbar logo is responsive (wide: mealtime, narrow: spotify) as POC

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,10 +14,9 @@
 
     <a class="navbar-brand" href="{{ url_for('main.index') }}">
         <picture>
-            <source srcset="{{ url_for('static', filename='img/logos/mealtime_logo.png') }}"
+            <source srcset="{{ url_for('static', filename='img/logos/mealtime-logo-wide.png') }}"
                     media="(min-width: 600px)">
-            <img src="{{ url_for('static', filename='img/Spotify-Logo-1526659588-1024x751.png') }}" alt="logo"
-                 width="35" height="35"/>
+            <img src="{{ url_for('static', filename='img/logos/mealtime-logo-mini.png') }}" alt="logo" height="35"/>
         </picture>
     </a>
 
