--- a/app/templates/show_user.html
+++ b/app/templates/show_user.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Student details{% endblock %}
+{% block title %}User details{% endblock %}
 {% block content %}
 <h1>Account details for {{ user.name }}</h1>
 <p>Email: {{ user.email }}</p>
