--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -7,18 +7,19 @@
         <button class="btn btn-primary btn-outline-light" type="submit">Search</button>
 </form>
 <a href="#" class="simple_search">Advanced Search</a>
+
 {% if results|length %}
 {# Variable is not empty #}
 <table class="table">
     <thead class="thead-dark">
     <tr>
-        <th scope="col">Student name</th>
+        <th scope="col">User name</th>
         <th scope="col">Email</th>
     </tr>
     </thead>
     <tbody> {% for result in results %}
     <tr>
-        <td>{{ result.name }}</td>
+        <td>{{ result.first_name }}</td>
         <td>{{ result.email }}</td>
     </tr>
      {% endfor %}
@@ -26,6 +27,6 @@
 </table>
 {% else %}
 {# Variable is empty #}
-<p>Sorry, no students found</p>
+<p>Sorry, no users found</p>
 {% endif %}
 {% endblock %}
