--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -5,10 +5,15 @@
     <form method=post novalidate>
         {{ form.csrf_token }}
         <dl>
-            {{ render_field(form.title, class='form-control') }}
-            {{ render_field(form.name, class='form-control') }}
-            {{ render_field(form.role, class='form-control') }}
-            {{ render_field(form.uni_id, class='form-control') }}
+{#            {{ render_field(form.title, class='form-control') }}#}
+{#            {{ render_field(form.name, class='form-control') }}#}
+{#            {{ render_field(form.role, class='form-control') }}#}
+{#            {{ render_field(form.uni_id, class='form-control') }}#}
+{#            {{ render_field(form.email, class='form-control') }}#}
+{#            {{ render_field(form.password, class='form-control') }}#}
+{#            {{ render_field(form.confirm, class='form-control') }}#}
+            {{ render_field(form.first_name, class='form-control') }}
+            {{ render_field(form.last_name, class='form-control') }}
             {{ render_field(form.email, class='form-control') }}
             {{ render_field(form.password, class='form-control') }}
             {{ render_field(form.confirm, class='form-control') }}
