--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -13,14 +13,14 @@
 <table class="table">
     <thead class="thead-dark">
     <tr>
-        <th scope="col">User name</th>
-        <th scope="col">Email</th>
+        <th scope="col">Recipe name</th>
+        <th scope="col">Time</th>
     </tr>
     </thead>
     <tbody> {% for result in results %}
     <tr>
-        <td>{{ result.first_name }}</td>
-        <td>{{ result.email }}</td>
+        <td>{{ result.recipe_name }}</td>
+        <td>{{ result.total_time }}</td>
     </tr>
      {% endfor %}
     </tbody>
