Updated all files with Mealtime

--- a/app/templates/recipes.html
+++ b/app/templates/recipes.html
@@ -13,9 +13,9 @@
     <tbody>
     {% for recipe in recipes %}
     <tr>
-        <td>{{ recipes.recipe_name }}</td>
-        <td>{{ recipes.cook_time }}</td>
-        <td>{{ recipes.prep_time }}</td>
+        <td>{{ recipe.recipe_name }}</td>
+        <td>{{ recipe.cook_time }}</td>
+        <td>{{ recipe.prep_time }}</td>
     </tr>
     {% endfor %}
     </tbody>
