--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -27,6 +27,6 @@
 </table>
 {% else %}
 {# Variable is empty #}
-<p>Sorry, no users found</p>
+<p>Sorry, no recipes found</p>
 {% endif %}
 {% endblock %}
