--- a/app/templates/show_user.html
+++ b/app/templates/show_user.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block title %}User details{% endblock %}
 {% block content %}
-<h1>Account details for {{ user.name }}</h1>
+<h1>Account details for {{ user.first_name }} {{ user.last_name }}</h1>
 <p>Email: {{ user.email }}</p>
-<p>Student ID number: {{ user.student_ref }}</p>
 {% endblock %}
