--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,6 @@
                name="search_term">
         <button class="btn btn-primary btn-outline-light" type="submit">Search</button>
     </form>
-    <a href="#" class="simple_search">Advanced Search</a>
+    <a href="{{ url_for("main.advanced_search") }}" class="simple_search">Advanced Search</a>
     </div>
 {% endblock %}
