Amended advanced_search, dbs, some html

--- a/app/templates/advanced_search.html
+++ b/app/templates/advanced_search.html
@@ -22,6 +22,6 @@
             {{ render_field(form.soybeans, class='form-control') }}
         </dl>
         <br>
-        <button type="submit" class="btn btn-primary">Sign Up</button>
+        <button type="submit" class="btn btn-primary">Search</button>
     </form>
 {% endblock %}
