--- a/app/templates/recipes.html
+++ b/app/templates/recipes.html
@@ -8,14 +8,16 @@
         <th scope="col">Recipes</th>
         <th scope="col">Cook time</th>
         <th scope="col">Prep time</th>
+        <th scope="col">Serves</th>
     </tr>
     </thead>
     <tbody>
     {% for recipe in recipes %}
-    <tr>
+    <tr>
         <td>{{ recipe.recipe_name }}</td>
         <td>{{ recipe.cook_time }}</td>
         <td>{{ recipe.prep_time }}</td>
+        <td>{{ recipe.serves }}</td>
     </tr>
     {% endfor %}
     </tbody>
