--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -15,12 +15,14 @@
     <tr>
         <th scope="col">Recipe name</th>
         <th scope="col">Time</th>
+        <th scope="col">Serves</th>
     </tr>
     </thead>
     <tbody> {% for result in results %}
     <tr>
         <td>{{ result.recipe_name }}</td>
         <td>{{ result.total_time }}</td>
+        <td>{{ result.serves }}</td>
     </tr>
      {% endfor %}
     </tbody>
