--- a/app/templates/recipes.html
+++ b/app/templates/recipes.html
@@ -14,7 +14,7 @@
     <tbody>
     {% for recipe in recipes %}
     <tr>
-        <td><a class="nav-link" href="{{ url_for('main.view_recipe', id_num = recipe.recipe_id) }}">{{ recipe.recipe_name }}</a></td>
+        <td><a href="{{ url_for('main.view_recipe', id_num = recipe.recipe_id) }}">{{ recipe.recipe_name }}</a></td>
         <td>{{ recipe.cook_time }}</td>
         <td>{{ recipe.prep_time }}</td>
         <td>{{ recipe.serves }}</td>
