Attempted to edit recipe viewer to show ingredients. Now working

--- a/app/templates/view_recipe.html
+++ b/app/templates/view_recipe.html
@@ -21,7 +21,7 @@
 <h2>Ingredients</h2>
 <ul>
     {% for i in ingredients %}
-    <li>{{ i.recipe_ingredient_id }}</li>
+    <li>{{ i.ingredient }}</li>
     {% endfor %}
 </ul>
 {% endblock %}
