Added return button on recipe viewer

--- a/app/templates/view_recipe.html
+++ b/app/templates/view_recipe.html
@@ -69,4 +69,5 @@
     <li>{{ s.step_description }}</li>
     {% endfor %}
 </ol>
+<a href="{{ url_for('main.recipes') }}">Return to all recipes</a>
 {% endblock %}
