--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -6,7 +6,7 @@
                name="search_term">
         <button class="btn btn-primary btn-outline-light" type="submit">Search</button>
 </form>
-<a href="{{ url_for("main.advanced_search") }}" class="simple_search">Advanced Search</a>
+<a href="{{ url_for('main.advanced_search') }}" class="simple_search">Advanced Search</a>
 
 {% if results|length %}
 {# Variable is not empty #}
