Added dairy allergy

--- a/app/templates/advanced_search.html
+++ b/app/templates/advanced_search.html
@@ -10,6 +10,7 @@
         <dl>
             {{ render_field(form.search_term, class='form-control') }}
             {{ render_field(form.diet_type, class='form-control') }}
+            {{ render_field(form.dairy, class='form-control') }}
             {{ render_field(form.celery, class='form-control') }}
             {{ render_field(form.gluten, class='form-control') }}
             {{ render_field(form.seafood, class='form-control') }}
