--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="#">Auto Chef</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('main.show_user', userid=current_user.id) }}">Account</a>
+                <a class="nav-link" href="{{ url_for('auth.edit_account') }}">Account</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for("auth.logout") }}">Log out</a>
