Added edit account functionality

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -4,6 +4,8 @@
 
 <h1>Account details for {{ user.first_name }} {{ user.last_name }}</h1>
 <p>Email: {{ user.email }}</p>
+<a class="nav-link" href="{{ url_for("auth.edit_password") }}">Edit password</a>
+
 
 
 {% endblock %}
