Working on meal planner

--- a/app/templates/view_recipe.html
+++ b/app/templates/view_recipe.html
@@ -20,6 +20,8 @@
     </tr>
     </tbody>
 </table>
+<h2>Nutrition</h2>
+<p>(Per serving)</p>
 <table class="table">
     <thead class="thead-light">
     <tr>
