--- a/app/templates/meal_planner.html
+++ b/app/templates/meal_planner.html
@@ -6,8 +6,10 @@
 <form method="post" novalidate>
     {{ form.csrf_token }}
     <dl>
-        {{ render_field(form.calories, class='form-control') }}
+        {{ render_field(form.upper_callimit, class='form-control') }}
+        {{ render_field(form.lower_callimit, class='form-control') }}
     </dl>
     <button type="submit" class="btn btn-primary">Create meal plan</button>
 </form>
+
 {% endblock %}
