--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -2,3 +2,9 @@
     margin-top: 20px;
     margin-bottom: 20px
 }
+
+body {
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+}
