--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,14 @@
-{# Inherit a parent template called base.html #}
+<head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+</head>
+
 {% extends "base.html" %}
-{# Add the title for this page #}
 {% block title %}Home{% endblock %}
-{# Add the content for this page #}
+
 {% block content %}
-    <h1>Welcome</h1>
+    <body background="{{ url_for('static', filename="img/bg/bg_wide.jpg") }}">
+
+    <h3>Meal planning made easy</h3>
     <form class="form-inline ml-auto simple_search" action="search" method="post">
         <input class="form-control" type="search" placeholder="Search recipes" aria-label="Search"
                name="search_term">
@@ -12,4 +16,5 @@
     </form>
     <a href="{{ url_for("main.advanced_search") }}" class="simple_search">Advanced Search</a>
     </div>
+    </body>
 {% endblock %}
