--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -1,4 +1,4 @@
-{% extends "base_errors.html" %}
+{% extends "errors/base_errors.html" %}
 {% block title %}Internal server error{% endblock %}
 {% block content %}
     <h1>Internal server error</h1>
