--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,8 +10,6 @@
 <body>
 <nav class="navbar navbar-expand bg-primary navbar-dark">
 
-    {#    <a class="navbar-brand" href="{{ url_for('main.index') }}">MealTime</a>#}
-
     <a class="navbar-brand" href="{{ url_for('main.index') }}">
         <picture>
             <source srcset="{{ url_for('static', filename='img/logos/mealtime-logo-wide.png') }}"
@@ -20,33 +18,43 @@
         </picture>
     </a>
 
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('main.recipes') }}">Recipes</a>
-        </li>
-        {# toolbar, If user not logged in then log in, else log out       #}
+    <!-- Navbar toggler-->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-nav navbar-collapse" id="navbarNavAltMarkup">
+
+        <a class="nav-link" href="{{ url_for('main.recipes') }}">Recipes</a>
+
+        {# toolbar, If user not logged in then log in, else log out #}
         {% if current_user.is_anonymous %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for("auth.signup") }}">Sign up</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for("auth.login") }}">Log in</a>
-            </li>
+            <a class="nav-link" href="{{ url_for("auth.signup") }}">Sign up</a>
+            <a class="nav-link" href="{{ url_for("auth.login") }}">Log in</a>
         {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="#">Meal Plans</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Auto Chef</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('auth.account') }}">Account</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for("auth.logout") }}">Log out</a>
-            </li>
+            <a class="nav-link" href="#">Meal Plans</a>
+            <a class="nav-link" href="#">Auto Chef</a>
+            <a class="nav-link" href="{{ url_for('auth.account') }}">Account</a>
+            <a class="nav-link" href="{{ url_for("auth.logout") }}">Log out</a>
         {% endif %}
-    </ul>
+        {#        <ul class="navbar-nav">#}
+        {#            <li class="nav-item">#}
+        {#                <a class="nav-link" href="{{ url_for('main.recipes') }}">Recipes</a>#}
+        {#            </li>#}
+        {# toolbar, If user not logged in then log in, else log out       #}
+        {#            {% if current_user.is_anonymous %}#}
+        {#                <a class="nav-link" href="{{ url_for("auth.signup") }}">Sign up</a>#}
+        {#                <a class="nav-link" href="{{ url_for("auth.login") }}">Log in</a>#}
+        {##}
+        {#            {% else %}#}
+        {#                <a class="nav-link" href="#">Meal Plans</a>#}
+        {#                <a class="nav-link" href="#">Auto Chef</a>#}
+        {#                <a class="nav-link" href="{{ url_for('auth.account') }}">Account</a>#}
+        {#                <a class="nav-link" href="{{ url_for("auth.logout") }}">Log out</a>#}
+        {#            {% endif %}#}
+        {#        </ul>#}
+    </div>
 </nav>
 <br>
 <div role=main class="container">
@@ -66,4 +74,17 @@
     {% endblock %}
 </div>
 </body>
+
+<footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
+</footer>
+
 </html>
