--- a/app/templates/meal_planner.html
+++ b/app/templates/meal_planner.html
@@ -1,13 +1,27 @@
 {% extends "base.html" %}
 {% block title %}Meal Planner{% endblock %}
+{% block script %}
+function outputUpdate(cals) {
+    document.querySelector('#selected-cals-upper').value = cals;
+}
+function outputUpdate2(cals) {
+    document.querySelector('#selected-cals-lower').value = cals;
+}
+{% endblock %}
 {% block content %}
 <h1>Meal Planner</h1>
 {% from "_formhelpers.html" import render_field %}
 <form method="post" novalidate>
     {{ form.csrf_token }}
     <dl>
-        {{ render_field(form.upper_callimit, class='form-control') }}
-        {{ render_field(form.lower_callimit, class='form-control') }}
+    <p>
+        {{ form.upper_callimit.label }}:
+        {{ form.upper_callimit(min=0, max=1000, oninput="outputUpdate(value)") }}
+        <output for="upper_callimit" id="selected-cals-upper">{{ form.upper_callimit.data }}</output>
+        {{ form.lower_callimit.label }}:
+        {{ form.lower_callimit(min=0, max=1000, oninput="outputUpdate2(value)") }}
+        <output for="upper_callimit" id="selected-cals-lower">{{ form.lower_callimit.data }}</output>
+    </p>
     </dl>
     <button type="submit" class="btn btn-primary">Create meal plan</button>
 </form>
