Updated calories filter

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
+
 .simple_search {
     margin-top: 20px;
     margin-bottom: 20px
