--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -2,5 +2,5 @@
 {% block title %}Page Not Found{% endblock %}
 {% block content %}
     <h1>Page Not Found</h1>
-    <p>Sometimes things go missing along the kitchen top. <a href="{{ url_for('main.index') }}">Go back home</a>.</p>
+    <p>Sometimes things go missing around the kitchen. <a href="{{ url_for('main.index') }}">Return to home</a>.</p>
 {% endblock %}
