--- a/app/templates/edit_account/edit_password.html
+++ b/app/templates/edit_account/edit_password.html
@@ -6,9 +6,9 @@
 <form method="post" novalidate>
     {{ form.csrf_token }}
     <dl>
-        {{ render_field(form.old_password, class='form-control') }}
-        {{ render_field(form.new_password, class='form-control') }}
-        {{ render_field(form.confirm_password) }}
+        {{ wtf.form_field(form.old_password, class='form-control') }}
+        {{ wtf.form_field(form.new_password, class='form-control') }}
+        {{ wtf.form_field(form.confirm_password) }}
         <input type=submit value='Submit' class='btn btn-primary'>
     </dl>
 </form>
