--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{#{% import "bootstrap/wtf.html" as wtf %}#}
 
 
 {% block title %} Signup {% endblock %}
@@ -8,16 +7,16 @@
     <form method=post novalidate>
         {{ form.csrf_token }}
         <dl>
-            {{ render_field(form.first_name, class='form-control') }}
-            {{ render_field(form.last_name, class='form-control') }}
-            {{ render_field(form.email, class='form-control') }}
-            {{ render_field(form.password, class='form-control') }}
-            {{ render_field(form.confirm, class='form-control') }}
-{#            {{ wtf.form_field(form.first_name, class='form-control') }}#}
-{#            {{ wtf.form_field(form.last_name, class='form-control') }}#}
-{#            {{ wtf.form_field(form.email, class='form-control') }}#}
-{#            {{ wtf.form_field(form.password, class='form-control') }}#}
-{#            {{ wtf.form_field(form.confirm, class='form-control') }}#}
+{#            {{ render_field(form.first_name, class='form-control') }}#}
+{#            {{ render_field(form.last_name, class='form-control') }}#}
+{#            {{ render_field(form.email, class='form-control') }}#}
+{#            {{ render_field(form.password, class='form-control') }}#}
+{#            {{ render_field(form.confirm, class='form-control') }}#}
+            {{ wtf.form_field(form.first_name, class='form-control') }}
+            {{ wtf.form_field(form.last_name, class='form-control') }}
+            {{ wtf.form_field(form.email, class='form-control') }}
+            {{ wtf.form_field(form.password, class='form-control') }}
+            {{ wtf.form_field(form.confirm, class='form-control') }}
         </dl>
         <br>
         <button type="submit" class="btn btn-primary">Sign Up</button>
