--- a/app/templates/advanced_search.html
+++ b/app/templates/advanced_search.html
@@ -26,18 +26,10 @@ function outputUpdate2(cals) {
                 {{ form.lower_callimit(min=0, max=1000, oninput="outputUpdate2(value)") }}
                 <output for="upper_callimit" id="selected-cals-lower">{{ form.lower_callimit.data }}</output>
             </p>
-            {{ render_field(form.diet_type, class='form-control', placeholder='Enter recipe') }}
-            {{ render_field(form.dairy, class='form-control') }}
-            {{ render_field(form.celery, class='form-control') }}
-            {{ render_field(form.gluten, class='form-control') }}
-            {{ render_field(form.seafood, class='form-control') }}
-            {{ render_field(form.eggs, class='form-control') }}
-            {{ render_field(form.lupin, class='form-control') }}
-            {{ render_field(form.mustard, class='form-control') }}
-            {{ render_field(form.tree_nuts, class='form-control') }}
-            {{ render_field(form.peanuts, class='form-control') }}
-            {{ render_field(form.sesame, class='form-control') }}
-            {{ render_field(form.soybeans, class='form-control') }}
+
+            {{ wtf.form_field(form.diet_type, class='form-control', placeholder='Enter recipe') }}
+            {{ wtf.form_field(form.allergies, class='form-control') }}
+
         </dl>
         <br>
         <button type="submit" class="btn btn-primary">Search</button>
