--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,9 +5,12 @@
 <form method="post" novalidate>
     {{ form.csrf_token }}
     <dl>
-        {{ render_field(form.email, class='form-control') }}
-        {{ render_field(form.password, class='form-control') }}
-        {{ render_field(form.remember_me) }}
+{#        {{ render_field(form.email, class='form-control') }}#}
+{#        {{ render_field(form.password, class='form-control') }}#}
+{#        {{ render_field(form.remember_me) }}#}
+        {{ wtf.form_field(form.email, class='form-control') }}
+        {{ wtf.form_field(form.password, class='form-control') }}
+        {{ wtf.form_field(form.remember_me) }}
         <input type=submit value='Login' class='btn btn-primary'>
     </dl>
 </form>
