--- a/app/templates/main/advanced_search.html
+++ b/app/templates/main/advanced_search.html
@@ -14,7 +14,7 @@
         <dl>
             {{ wtf.form_field(form.search_term, class='form-control', placeholder="Enter recipe name") }}
             <p>
-                <label for="amount">Calorie range:</label>
+                <label for="amount">Calorie range (per person):</label>
                 <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
                 <input class='form-control' id="hidden" name="hidden" type="hidden" value="">
             </p>
