--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -4,21 +4,26 @@
 {% block title %} Signup {% endblock %}
 {% from "_formhelpers.html" import render_field %}
 {% block content %}
-    <form method=post novalidate>
-        {{ form.csrf_token }}
-        <dl>
-{#            {{ render_field(form.first_name, class='form-control') }}#}
-{#            {{ render_field(form.last_name, class='form-control') }}#}
-{#            {{ render_field(form.email, class='form-control') }}#}
-{#            {{ render_field(form.password, class='form-control') }}#}
-{#            {{ render_field(form.confirm, class='form-control') }}#}
-            {{ wtf.form_field(form.first_name, class='form-control') }}
-            {{ wtf.form_field(form.last_name, class='form-control') }}
-            {{ wtf.form_field(form.email, class='form-control') }}
-            {{ wtf.form_field(form.password, class='form-control') }}
-            {{ wtf.form_field(form.confirm, class='form-control') }}
-        </dl>
-        <br>
-        <button type="submit" class="btn btn-primary">Sign Up</button>
-    </form>
+    <div class="card" style="width: 50vw;">
+        <div class="card-header">Create a new account</div>
+        <div class="card-body">
+            <form method=post novalidate>
+                {{ form.csrf_token }}
+                <dl>
+                    {#            {{ render_field(form.first_name, class='form-control') }}#}
+                    {#            {{ render_field(form.last_name, class='form-control') }}#}
+                    {#            {{ render_field(form.email, class='form-control') }}#}
+                    {#            {{ render_field(form.password, class='form-control') }}#}
+                    {#            {{ render_field(form.confirm, class='form-control') }}#}
+                    {{ wtf.form_field(form.first_name, class='form-control') }}
+                    {{ wtf.form_field(form.last_name, class='form-control') }}
+                    {{ wtf.form_field(form.email, class='form-control') }}
+                    {{ wtf.form_field(form.password, class='form-control') }}
+                    {{ wtf.form_field(form.confirm, class='form-control') }}
+                </dl>
+                <br>
+                <button type="submit" class="btn btn-primary">Sign Up</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
