Updated background image

--- a/app/templates/auth/edit_account/edit_password.html
+++ b/app/templates/auth/edit_account/edit_password.html
@@ -3,13 +3,19 @@
 {% from "_formhelpers.html" import render_field %}
 
 {% block content %}
-<form method="post" novalidate>
-    {{ form.csrf_token }}
-    <dl>
-        {{ wtf.form_field(form.old_password, class='form-control') }}
-        {{ wtf.form_field(form.new_password, class='form-control') }}
-        {{ wtf.form_field(form.confirm_password) }}
-        <input type=submit value='Submit' class='btn btn-primary'>
-    </dl>
-</form>
+<div class="card" style="width: 50vw;">
+    <div class="card-header">Edit password</div>
+    <div class="card-body">
+        <form method="post" novalidate>
+            {{ form.csrf_token }}
+            <dl>
+                {{ wtf.form_field(form.old_password, class='form-control') }}
+                {{ wtf.form_field(form.new_password, class='form-control') }}
+                {{ wtf.form_field(form.confirm_password) }}
+                <input type=submit value='Submit' class='btn btn-primary'>
+            </dl>
+        </form>
+        
+    </div>
+</div>
 {% endblock %}
