--- a/app/templates/auth/edit_account/edit_preferences.html
+++ b/app/templates/auth/edit_account/edit_preferences.html
@@ -2,13 +2,18 @@
 {% block title %}Edit Preferences{% endblock %}
 
 {% block content %}
-    {% from "_formhelpers.html" import render_field %}
-    <form method=post novalidate>
-        {{ form.csrf_token }}
-        <dl>
-            {{ wtf.form_field(form.diet_type, class='form-control') }}
-            {{ wtf.form_field(form.allergies, class='form-control') }}
-        </dl>
-        <button type="submit" class="btn btn-primary">Save preferences</button>
-    </form>
+    <div class="card" style="width: 50vw;">
+        <div class="card-header">Edit preferences</div>
+        <div class="card-body">
+            {% from "_formhelpers.html" import render_field %}
+            <form method=post novalidate>
+                {{ form.csrf_token }}
+                <dl>
+                    {{ wtf.form_field(form.diet_type, class='form-control') }}
+                    {{ wtf.form_field(form.allergies, class='form-control') }}
+                </dl>
+                <button type="submit" class="btn btn-primary">Save preferences</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
