--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -11,3 +11,10 @@ body {
     height: 100%;
 }
 
+#hero_image {
+    background: url('bg/bg_wide.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
