--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,26 +25,23 @@
     </a>
 
     <!-- Navbar toggler-->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="#navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-nav navbar-collapse" id="navbarTogglerDemo01">
+    <div class="collapse navbar-nav navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li>
                 <a class="nav-link" href="{{ url_for('main.recipes') }}">Recipes</a>
             </li>
             {# toolbar, If user not logged in then log in, else log out #}
             {% if current_user.is_anonymous %}
-                <ul class="nav navbar-right">
-                    <li>
-                        <a class="nav-link" href="{{ url_for("auth.signup") }}">Sign up</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="{{ url_for("auth.login") }}">Log in</a>
-                    </li>
-                </ul>
+                <li>
+                    <a class="nav-link" href="{{ url_for("auth.signup") }}">Sign up</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="{{ url_for("auth.login") }}">Log in</a>
+                </li>
             {% else %}
                 <li>
                     <a class="nav-link" href="#">Meal Plans</a>
