--- a/app/templates/main/meal_planner.html
+++ b/app/templates/main/meal_planner.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Meal Planner{% endblock %}
 
 {% block content %}
-    <body background="{{ url_for('static', filename="img/bg/bg_wide.jpg") }}">
+    <body>
     <h3>Meal planning made easy</h3>
     <form class="form-inline ml-auto simple_search" action="search" method="post">
         <input class="form-control" type="search" placeholder="Search recipes" aria-label="Search"
