--- a/app/templates/main/meal_planner.html
+++ b/app/templates/main/meal_planner.html
@@ -3,13 +3,8 @@
 
 {% block content %}
     <body>
-    <h3>Meal planning made easy</h3>
-    <form class="form-inline ml-auto simple_search" action="search" method="post">
-        <input class="form-control" type="search" placeholder="Search recipes" aria-label="Search"
-               name="search_term">
-        <button class="btn btn-primary btn-outline-light" type="submit">Search</button>
-    </form>
-    <a href="{{ url_for("main.advanced_search") }}" class="simple_search">Advanced Search</a>
-    </div>
+    <h1>Meal Planner</h1>
+    <h3>Step 1: Search for recipes</h3>
+    
     </body>
 {% endblock %}
