fixed fat navbar

--- a/app/templates/main/meal_planner.html
+++ b/app/templates/main/meal_planner.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h3>Meal Planner</h3>
-    <ol>
+    <ol id="meal_planner_list">
         <li>
             <p>
                  <b>Create a new mealplan</b>
