Added note to edit_preferences.html

--- a/app/templates/auth/edit_account/edit_preferences.html
+++ b/app/templates/auth/edit_account/edit_preferences.html
@@ -12,6 +12,8 @@
                     {{ wtf.form_field(form.diet_type, class='form-control') }}
                     {{ wtf.form_field(form.allergies, class='form-control') }}
                 </dl>
+                <p>Note: When you store preferences, these preferences will be automatically applied while searching for
+                    recipes</p>
                 <button type="submit" class="btn btn-primary">Save preferences</button>
             </form>
         </div>
